# video-downloader-tauri

./: .gitignore  CHANGELOG.md  DEV_NOTES.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
playwright-report/: index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: download-ffmpeg.cjs
src-tauri/src/: downloader.rs  lib.rs  parser.rs
src/components/: Button.tsx  DownloadQueue.tsx  EpisodeSelector.tsx  FileBrowser.tsx  HistoryPanel.tsx  Input.tsx  LogPanel.tsx  Logo.tsx  MiniMode.tsx  PresetSelector.tsx  ProgressBar.tsx  SeriesCard.tsx  SettingsPanel.tsx  ShortcutsHelp.tsx  SpeedGraph.tsx  ThemeSelector.tsx  UpdateDialog.tsx  VideoPreview.tsx  index.ts
src/hooks/: useCustomTheme.ts  useDownloadPresets.ts  useHistory.ts  useI18n.tsx  useKeyboardShortcuts.ts  useLogger.ts  useSettings.ts  useSpeedGraph.ts  useSpeedSchedule.ts  useUpdater.ts
src/types/: index.ts
tests/: app.spec.ts  theme.spec.ts
