[package]
name = "tauri-app"
version = "1.4.4"
description = "Rongyok Video Downloader"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTML parsing
scraper = "0.22"
regex = "1"

# File operations
futures-util = "0.3"
dirs = "5"

# Error handling
thiserror = "2"
anyhow = "1"
